# routes/api.php
@@ -404,6 +404,7 @@ Route::prefix('v1')->middleware([
     // Basisdaten
     Route::get('/continents', [\App\Http\Controllers\Api\V1\BaseDataController::class, 'continents'])->name('v1.continents');
     Route::get('/countries', [\App\Http\Controllers\Api\V1\BaseDataController::class, 'countries'])->name('v1.countries');
+    Route::get('/countries/{code}', [\App\Http\Controllers\Api\V1\BaseDataController::class, 'country'])->name('v1.countries.show');
     Route::get('/regions', [\App\Http\Controllers\Api\V1\BaseDataController::class, 'regions'])->name('v1.regions');
     Route::get('/event-categories', [\App\Http\Controllers\Api\V1\BaseDataController::class, 'eventCategories'])->name('v1.event-categories');
 });
